k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: palawan-converter
  name: palawan-converter
spec:
  replicas: 1
  selector:
    matchLabels:
      run: palawan-converter
  template:
    metadata:
      labels:
        run: palawan-converter
    spec:
      volumes:
      - name: google-cloud-key
        secret:
          secretName: gcp-key
      containers:
      - name: palawan-converter
        image: gcr.io/palawan-273011/palawan-converter:latest
        ports:
        - containerPort: 5000
        livenessProbe:
          httpGet:
            path: /status
            port: 5000
        readinessProbe:
          httpGet:
            path: /status
            port: 5000
        volumeMounts:
        - name: google-cloud-key
          mountPath: /var/secrets/google
