k8s/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: palawan-converter-service
spec:
  selector:
     run: palawan-converter
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
