k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: staging-converter-ingress
spec:
  backend:
    serviceName: palawan-converter-service
    servicePort: 5000
